# iterate_sequence

./: README.md  pyproject.toml
src/: test.ipynb
src/.ipynb_checkpoints/: test-checkpoint.ipynb
src/iterate_sequence/: __init__.py  __init__.py~
src/sequence_iterator/: __init__.py
